Fixed banner styling error on mobile

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,11 +1,12 @@
 .banner {
   display: flex;
-  min-height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-bottom: 130px;
-  margin-bottom: 60px;
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);
+  height: 100vh;
+  margin-bottom: 30px;
 }
 
 .banner h1 {
