--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,6 @@
 @import url("components/footer.css");
 
 
-
-
-
 html {
   scroll-behavior: smooth;
 }
@@ -20,8 +17,6 @@ html {
 #top {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);
 }
 
 body {
